tested azure deployment and made changes

--- a/playbooks/azure_cluster/spec_tpl.j2
+++ b/playbooks/azure_cluster/spec_tpl.j2
@@ -12,5 +12,5 @@ fabric:
       FABRIC_LOGGING_SPEC: DEBUG
     orderer:
       FABRIC_LOGGING_SPEC: DEBUG
-  endpoint_address: {{external_ip}}
+  endpoint_address: {{external_ip.stdout}}
   netname: "fabric"
