server files changed

--- a/server/playbooks/spec_tpl.j2
+++ b/server/playbooks/spec_tpl.j2
@@ -13,4 +13,4 @@ fabric:
     orderer:
       FABRIC_LOGGING_SPEC: DEBUG
   endpoint_address: {{external_ip.stdout}}
-  netname: "fabric"
+  netname: {{aks_name}}
