frontend work finished

--- a/front-end/src/app/shared/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/sidebar/sidebar.component.html
@@ -10,7 +10,7 @@
     <li class="nav-item menu-items" [ngClass]="{ 'active': home.isActive }">
       <a class="nav-link" routerLink="/home" routerLinkActive #home="routerLinkActive">
         <span class="menu-icon">
-          <i class="mdi mdi-speedometer"></i> 
+          <i class="mdi mdi-home"></i> 
         </span>
         <span class="menu-title" translate>Home</span>
       </a>
