--- a/front-end/src/app/dashboard/dashboard.component.html
+++ b/front-end/src/app/dashboard/dashboard.component.html
@@ -1,93 +1,51 @@
-<div class="row" id="proBanner">
-  <div class="col-12 grid-margin">
-    <span class="align-items-center purchase-popup">
-      <p>Get tons of UI components, Plugins, multiple layouts, 20+ sample pages, and more!</p>
-      <a href="https://www.bootstrapdash.com/product/corona-angular/?utm_source=organic&utm_medium=banner&utm_campaign=free-preview" target="_blank" class="btn download-button purchase-button btn-purple ml-auto btn-primary">Upgrade To Pro</a>
-      <i class="mdi mdi-close"  (click)="toggleProBanner($event)"  id="bannerClose"></i>
-    </span>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
-    <div class="card">
-      <div class="card-body">
-        <div class="row">
-          <div class="col-9">
-            <div class="d-flex align-items-center align-self-start">
-              <h3 class="mb-0">$12.34</h3>
-              <p class="text-success ml-2 mb-0 font-weight-medium">+3.5%</p>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="icon icon-box-success ">
-              <span class="mdi mdi-arrow-top-right icon-item"></span>
-            </div>
-          </div>
-        </div>
-        <h6 class="text-muted font-weight-normal">Potential growth</h6>
-      </div>
-    </div>
-  </div>
-  <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
-    <div class="card">
-      <div class="card-body">
-        <div class="row">
-          <div class="col-9">
-            <div class="d-flex align-items-center align-self-start">
-              <h3 class="mb-0">$17.34</h3>
-              <p class="text-success ml-2 mb-0 font-weight-medium">+11%</p>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="icon icon-box-success">
-              <span class="mdi mdi-arrow-top-right icon-item"></span>
-            </div>
-          </div>
-        </div>
-        <h6 class="text-muted font-weight-normal">Revenue current</h6>
-      </div>
-    </div>
-  </div>
-  <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
-    <div class="card">
-      <div class="card-body">
-        <div class="row">
-          <div class="col-9">
-            <div class="d-flex align-items-center align-self-start">
-              <h3 class="mb-0">$12.34</h3>
-              <p class="text-danger ml-2 mb-0 font-weight-medium">-2.4%</p>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="icon icon-box-danger">
-              <span class="mdi mdi-arrow-bottom-left icon-item"></span>
-            </div>
-          </div>
-        </div>
-        <h6 class="text-muted font-weight-normal">Daily Income</h6>
-      </div>
-    </div>
-  </div>
-  <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
-    <div class="card">
-      <div class="card-body">
-        <div class="row">
-          <div class="col-9">
-            <div class="d-flex align-items-center align-self-start">
-              <h3 class="mb-0">$31.53</h3>
-              <p class="text-success ml-2 mb-0 font-weight-medium">+3.5%</p>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="icon icon-box-success ">
-              <span class="mdi mdi-arrow-top-right icon-item"></span>
-            </div>
-          </div>
-        </div>
-        <h6 class="text-muted font-weight-normal">Expense current</h6>
+
+
+
+
+
+
+<div class="row" >
+<div  class="col-lg-6 grid-margin stretch-card">
+  <div  class="card">
+    <div  class="card-body">
+      <h4  class="card-title">Network list</h4>
+      <h5 *ngIf="!show" >Create a network from homepage</h5>
+      <div *ngIf="show" class="table-responsive">
+        <table  class="table">
+          <thead >
+            <tr >
+              <th >Name</th>
+              <th>Cloud Provider</th>
+              <th >Created</th>
+              <th >Hyperledger Explorer</th>
+              <th >Status</th>
+              
+            </tr>
+          </thead>
+          <tbody >
+            <tr *ngFor="let item of networks; index as i;">
+              <td >{{item.name}}</td>
+              <td >{{item.cloudProvider}}</td>
+              <td >{{item.createdAt | date:'medium'}}</td>
+              <td *ngIf = "item.explorerIP !== null "><a href={{item.explorerIP}} target="_blank">Explorer Link</a>
+              </td>
+              <td *ngIf = "item.explorerIP === null "> Not Active</td>
+              <td ><label  [ngClass]="{'badge-warning': item.status == 0,'badge-success': item.status == 1, 'badge badge-danger': item.status == 2 }" >{{status[item.status]}}</label></td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
 </div>
 
-
+<div  *ngIf="show" class="col-lg-3 grid-margin stretch-card">
+  <div  class="card">
+    <div  class="card-body">
+      <h4  class="card-title">Hyperledger Explorer Details</h4>
+    <p>Username: exploreradmin</p>
+    <p>Password: exploreradminpw</p>
+</div>
+</div>
+</div>
+</div>
