--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -1,12 +1,4 @@
-<!-- <div class="row" id="proBanner">
-  <div class="col-12 grid-margin">
-    <span class="align-items-center purchase-popup">
-      <p>Get tons of UI components, Plugins, multiple layouts, 20+ sample pages, and more!</p>
-      <a href="https://www.bootstrapdash.com/product/corona-angular/?utm_source=organic&utm_medium=banner&utm_campaign=free-preview" target="_blank" class="btn download-button purchase-button btn-purple ml-auto btn-primary">Upgrade To Pro</a>
-      <i class="mdi mdi-close"  (click)="toggleProBanner($event)"  id="bannerClose"></i>
-    </span>
-  </div>
-</div> -->
+
 <div *ngIf="!formShow" class="row">
   <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
@@ -14,17 +6,26 @@
         <div class="row">
           <div class="col-9">
             <div class="d-flex align-items-center align-self-start">
-              <h3 class="mb-0">Create a simple Blockchain network using Hyperledger Fabric on any cloud provider with a click</h3>         
+              <h3 class="mb-0">Create a simple Blockchain network using Hyperledger Fabric on any cloud provider with a click</h3>  
+              <h4 *ngIf="limit" >Currently we only support one network per user</h4>       
             </div>
           </div>  
           <div class="col-2">
-            <a  class="nav-link btn btn-success create-new-button " id="createbuttonDropdown" (click)="formShowClick()" translate="">Create a Network</a>          
+            <a  class="nav-link btn btn-success create-new-button " id="createbuttonDropdown" (click)="formShowClick()" *ngIf="!limit" translate="">Create a Network</a>          
           </div>
     </div>   
   </div>
 </div>
 </div>
 </div>
+
+
+
+
+
+
+
+
 <div *ngIf="formShow" >
 <div class="page-header">
   <h3 class="page-title">
@@ -36,21 +37,22 @@
   <div class="col-md-6 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">Azure</h4>
+        <h4 class="card-title">Hyperledger Fabric Network</h4>
        
         <form class="forms-sample">
           <div class="form-group">
             <label for="exampleInputUsername1">Network Name</label>
-            <input type="text" class="form-control" id="name" placeholder="name" [(ngModel)]="name" [ngModelOptions]="{standalone: true}">
+            <input type="text" class="form-control" id="name" placeholder="name" [(ngModel)]="name" [ngModelOptions]="{standalone: true}"  >
+            <p *ngIf="nameexists" class="alert alert-danger ng-star-inserted">Network already exists</p>
           </div>
           <div class="col-3">
-            <a  class="nav-link btn btn-success create-new-button " id="createbuttonDropdown" (click)="createNetwork()"  translate="">Create Network</a>          
+            <a  class="nav-link btn btn-success create-new-button " id="createbuttonDropdown" (click)="createNetwork()" *ngIf="!progress" translate="">Create Network</a>          
           </div>
         </form>
       </div>
     </div>
   </div>
-
+  
   <div class="col-md-3  align-items-right">
     <div class="card corona-gradient-card">
       <div class="card-body">
@@ -86,4 +88,22 @@
     </div>
   </div>
 </div>
+</div>
+
+<div *ngIf="formShow && progress" class="row" >
+  <div class="col-md-4 grid-margin stretch-card">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title">Network creation in progress for ' {{name}}  '</h4>
+        <div class= "col-md-3">
+          <div _ngcontent-xhe-c38="" class="jumping-dots-loader">
+            <span _ngcontent-xhe-c38=""></span>
+            <span _ngcontent-xhe-c38=""></span>
+            <span _ngcontent-xhe-c38=""></span>
+          </div>
+        </div>
+        <h3 class="card-title">It will take 30 minutes for the process to complete. If you exit from this page you can see the status of you network in dashboard</h3>
+      </div>
+    </div>
+  </div>
 </div>
